add get review by book,check token, refactor code, add swagger
